--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -12,9 +12,17 @@ html, body {
 body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(to bottom, transparent, rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
+  font-family: $font-family;
 }
 
 a {
   color: inherit;
   text-decoration: none;
+}
+
+// Headers
+h1, h2, h3, h4, h5, h6 {
+  font-weight: 100;
+  line-height: 1.2;
+  margin: .5rem 1rem;
 }
