Added comingsoon page

--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -12,7 +12,6 @@ html, body {
 body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(to bottom, transparent, rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
-  font-family: $font-family;
 }
 
 a {
@@ -21,8 +20,31 @@ a {
 }
 
 // Headers
-h1, h2, h3, h4, h5, h6 {
-  font-weight: 100;
+h1, h2 {
+  font-size: 36px;
+  padding: $spacing-md $spacing-lg;
+  font-weight: 800;
   line-height: 1.2;
-  margin: .5rem 1rem;
+  font-family: $header-font;
+}
+
+h3 {
+  font-size: 32px;
+  padding: $spacing-md $spacing-lg;
+  font-family: $body-font;
+  font-weight: 300;
+  line-height: 1.1;
+}
+
+h4, h5, h6 {
+  font-size: 18px;
+  padding: $spacing-md $spacing-lg;
+  font-family: $body-font;
+  font-weight: 300;
+  line-height: 1.1;
+}
+
+p {
+  padding: $spacing-md $spacing-lg;
+  font-family: $body-font;
 }
