--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,6 +1,12 @@
 // Colors
-$primary-color: #007bff;
+$primary-color: #000099;
 $secondary-color: #6c757d;
 
 // Fonts
-$font-family: "Adamina", serif;
+$header-font: "Playfair Display", serif;
+$body-font: "Montserrat", sans-serif;
+
+// Spacing
+$spacing-sm: 2px;
+$spacing-md: 4px;
+$spacing-lg: 8px;
