--- a/src/components/ComingSoon/ComingSoon.module.scss
+++ b/src/components/ComingSoon/ComingSoon.module.scss
@@ -24,9 +24,14 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
+
+        .photo {
+            border-radius: 4px;
+        }
   
-      @media screen and (min-width: 769px) {
-        flex: 1;
-      }
+        @media screen and (min-width: 769px) {
+            flex: 1;
+            margin-top: 2rem;
+        }
     }
   }
